--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
 
 	<platform name="android">
 		<source-file src="src/android/Chooser.java" target-dir="src/com/cyph/cordova" />
-		<resource-file src="src/android/filepath.xml" target-dir="src/res/xml/filepath.xml" />
+		<resource-file src="src/android/filepath.xml" target="src/res/xml/filepath.xml" />
 
 		<config-file target="config.xml" parent="/*">
 			<feature name="Chooser">
